app/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: projects.registry.vmware.com/tce/logo:latest
        name: logo
        resources:
          limits:
            memory: 1G
            cpu: 100m
