app/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo
  namespace: demo
spec:
  selector:
    app: demo
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
